--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,4 +28,13 @@
     margin-left: auto;
     font-size: 36px;
   }
+  .quantity{
+    display: flex;
+  }
+  .arrow{
+    cursor: pointer;
+  }
+  .value{
+    margin: 0 10px;
+  }
 }
