--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -37,4 +37,14 @@
   .value{
     margin: 0 10px;
   }
+button{
+  margin-left: auto;
+  margin-top: 50px;
+}
+.test-warning{
+  text-align: center;
+  margin-top: 40px;
+  font-size: 24px;
+  color: red;
+  }
 }
